# esm-rs

./: Cargo.toml  README.md  build.rs
bindings/: ba2.h  bsa.h  fo3.h  types.h
bindings/fields/: ATTR.h  CLAS.h  CNTO.h  COED.h  CRDT.h  CTDA.h  DATA.h  DNAM.h  DODT.h  DSTD.h  EFIT.h  ENIT.h  HEDR.h  MGEF.h  OBND.h  SCHR.h  SNDD.h  SPIT.h  XNAM.h
bindings/headers/: field.h  group.h  record.h  version.h
src/: bsa.rs  field.rs  fo3.rs  group.rs  lib.rs  record.rs
src/fo3/: group_label.rs  headers.rs  label.rs  record_flags.rs  timestamp.rs  version.rs  version_control.rs
