[package]
name = "esm-bindings"
version = "0.2.3"
authors = ["tRuTrIx <trutrix@monocyte.host>", "StealthOfKing <sok@monocyte.host>"]
edition = "2021"
description = "ESM struct bindings"

[dependencies]
fourcc = { git = "https://github.com/StealthOfKing/rust-fourcc.git" }

[build-dependencies]
bindgen = "0.70"
